# Jupyter

./: .envrc  Benchmark.ipynb  README.md  dgl_cu115-0.9.0-cp39-cp39-manylinux1_x86_64.whl  flake.nix  flake.nix_220522_final  flake.nix_darwin_mkl  flake.nix_darwin_openblas  flake.nix_server  pyproject.toml  pyproject.toml_220520_final  pyproject.toml_server  shell.nix  shell.nix_bak  shell.nix_darwin  torch-1.11.0+cu115-cp39-cp39-linux_x86_64.whl
MC_Dropout/: __init__.py
bayesian-dl-experiment/: MC_Dropout.ipynb
bayesian-dl-experiment/.ipynb_checkpoints/: MC_Dropout-checkpoint.ipynb
my-python-package/: pyproject.toml
my-python-package/ronald_bdl/ronald_bdl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
my-python-package/ronald_bdl/ronald_bdl/models/: squeezenet_original.py
polynote/: config.yml
polynote/notebooks/: Hello Polynote.ipynb
ronald_bdl/ronald_bdl/models/.ipynb_checkpoints/: squeezenet_original-checkpoint.py
