[tool.poetry]
name = "my-python-package"
version = "0.1.0"
description = ""
authors = ["Suwon Park <sepiabrown@naver.com>"]

[tool.poetry.dependencies]
# Must needed
python = "~3.9"
#hatchling = "0.25.1" # 1.0.0 not working
#packaging = "^21.3" # statsmodels #"^20.0" # matplotlib

# Test
#deprecation = "2.1.0"
#tomli = "2.0.1" # unknown package needs 2.0.1? flit?
#flit = "3.7.1"
#tqdm = "^4.64.0"

## Safe from infinite recursion
scikit-learn = "^1.1.1"
keras = "^2.8.0"
statsmodels = "^0.13.2"
bokeh = "^2.4.3"
numpyro = "^0.9.2" # needs jaxlib
jaxlib = "^0.3.10"
#jaxlib = { path = "jaxlib-0.1.65+cuda112-cp39-none-manylinux2010_x86_64.whl" }
jax = "^0.3.13"
kaggle = "^1.5.12"
xgboost = "1.5.2" # "^1.6.1" not working
lightgbm = "3.3.1"
graphviz = "^0.20"
scipy = "<1.8.0" #"^1.8.0"
pandas = "1.4.2"
kiwisolver = "<=1.3.2"
cppy = "<=1.1.0"
aesara = "^2.5.3"

## Needed for polynote
##numpy
##pandas==1.2.5
jedi = ">=0.18.1"
jep = "4.0.0"
jsonschema = "4.6.0"
virtualenv = "*"
nbconvert = "*"

# Packages that creates setuptools item in poetry.lock 
# (either directly or through other dependencies)
# -> infinite recursion
numpy = "1.22.4" # "1.21.5"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
tensorflow-gpu = "^2.9.1" ########## Caution! Very Tricky!
pymc = "^4.0.0" # pymc4
# Needed for polynote
ipython = "*"

# Doesn't exists in nixpkgs
#bambi = "^0.9.0"

# Failed to build
#pycuda = "^2021.1"

# Etc
pyro-ppl = "^1.8.0" # error: Missing suitable source/wheel file entry for torch
torch = {version = "1.11.0+cu115", source = "torchWithCuda"}
torchvision = { version = "^0.12.0", source = "pypi"} # needs explicit : scipy

# Not using at the moment
#pymc3 = "^3.11.4"
#Theano = "1.0.5"
#pymc-nightly = "4.0.0-beta.2-dev.20220304"

#[[tool.poetry.source]]
#name = "jaxlibWithCuda"
##url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.8+cuda11.cudnn82-cp39-none-manylinux2014_x86_64.whl"
#url = "https://storage.googleapis.com/jax-releases/cuda11"
#secondary = true

#[[tool.poetry.dependencies.torch]]
#python = "~3.9"
#markers = "platform_system == 'Linux'"
#url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"

[[tool.poetry.source]]
name = "torchWithCuda"
# ex) url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"
url = "https://download.pytorch.org/whl/cu115"
# Solution: secondary = true, default with no option 
#secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
