[tool.poetry]
name = "my-python-poetry"
version = "0.0.1"
description = ""
authors = ["Suwon Park <sepiabrown@naver.com>"]

[tool.poetry.dependencies]
python = "~3.9"

##################################################
# GNN must-haves

## Local files
dgl-cu115 = { path = "localPackages/dgl_cu115-0.9.0-cp39-cp39-manylinux1_x86_64.whl" }
# https://data.dgl.ai/wheels/repo.html
#torch-cluster = { path = "localPackages/torch_cluster-1.6.0-cp39-cp39-manylinux1_x86_64.whl" }
#torch-scatter = { path = "localPackages/torch_scatter-2.0.9-cp39-cp39-manylinux1_x86_64.whl" }
#torch-sparse = { path = "localPackages/torch_sparse-0.6.15-cp39-cp39-manylinux1_x86_64.whl" }
#torch-spline-conv = { path = "localPackages/torch_spline_conv-1.2.1-cp39-cp39-manylinux1_x86_64.whl" }
#torch-cluster = { path = "localPackages/torch_cluster-1.6.0+pt112cu116-cp39-cp39-linux_x86_64.whl" }
#torch-scatter = { path = "localPackages/torch_scatter-2.1.0+pt112cu116-cp39-cp39-linux_x86_64.whl" }
#torch-sparse = { path = "localPackages/torch_sparse-0.6.15+pt112cu116-cp39-cp39-linux_x86_64.whl" }
#torch-spline-conv = { path = "localPackages/torch_spline_conv-1.2.1+pt112cu116-cp39-cp39-linux_x86_64.whl" }

torch-cluster = { path = "localPackages/torch_cluster-1.6.0+pt112cu116-cp39-cp39-manylinux1_x86_64.whl" }
torch-scatter = { path = "localPackages/torch_scatter-2.1.0+pt112cu116-cp39-cp39-manylinux1_x86_64.whl" }
torch-sparse = { path = "localPackages/torch_sparse-0.6.15+pt112cu116-cp39-cp39-manylinux1_x86_64.whl" }
torch-spline-conv = { path = "localPackages/torch_spline_conv-1.2.1+pt112cu116-cp39-cp39-manylinux1_x86_64.whl" }



# torch-* related
# https://data.pyg.org/whl/torch-1.11.0%2Bcu115.html
# https://pytorch-geometric.com/whl/torch-1.11.0%2Bcu115.html

## Exactly 22.05

## At least 22.05

## Exactly 22.11

## At least 22.11

##
### models
graph-nets = "*" #"^1.1.0"
jraph = "*" #"^0.0.6-alpha.0"
torch-geometric = "*" #"^2.1.0"
dglke = "*"

### datasets
ogb = "*"

## Automatically derived packages
#networks = "2.8.8"
#dm-sonnet = "2.0.0"
#dm-tree = "0.1.7"
#colorama = "0.4.4"

# GNN must-haves (end)
##################################################

##################################################
# LAIDD

## Local files

## Exactly 22.05

## At least 22.05

## Exactly 22.11

## At least 22.11

##
PyTDC = "*" #"^0.3.6"
deepchem = "*" #"^2.6.1"

## Automatically derived packages
#rdkit = "*" #"^2022.3.5" == rdkit-pypi
#seaborn = "^0.11.2" # needed by PyTDC

# LAIDD (end)
##################################################

##################################################
# nbdev

## Local files

## Exactly 22.05

## At least 22.05

## Exactly 22.11

## At least 22.11

##

## Automatically derived packages

# nbdev (end)
##################################################

##################################################
# Conventional ML

## Local files

## Exactly 22.05

## At least 22.05

## Exactly 22.11

## At least 22.11

##
pymc = "*" #"^4.4.0" # pymc4
lightgbm = "*" #"3.3.1"
xgboost = "*" #"1.5.2" # "^1.6.1" not working?
missingno = "*" #"^0.5.1"
imblearn = "*" #"^0.0"

## Automatically derived packages
#xarray-einstats = "0.3.0" # needed by arviz - pymc

# Conventional ML (end)
##################################################

##################################################
# Common must-haves

## Local files

## Exactly 22.05
#apache-beam = "2.37.0" #">=2.37.0,<2.40.0" # needed by tensorflow-datasets
#idna = "3.3"
#numba = "0.55.2" 
#tensorboard = "2.8.0"
#typing-extensions = "4.1.1"
#zipp = "3.7.0"
#tensorflow-metadata = "1.8.0"
#termcolor = "1.1.0"
#h5py = "3.6.0"
##pyarrow = "8.0.0" # apache-beam (2.40.0) depends on pyarrow (>=0.15.1,<8.0.0)
#orjson = "3.6.7"
#urllib3 = "1.26.9"

## At least 22.05
numpy = ">=1.21.5,<1.23.1"
pythran = "0.9.11" #"<0.9.12" # VS tensorflow-gpu for gast # needed by scipy
#orjson = ">=3.6.7,<3.8.0" # needed by apache-beam

## Exactly 22.11

## At least 22.11
Cython = "^0.29.32" # needed by numpy needed by graph-nets

##
#statsmodels = "*" #"^0.13.2" # takes long time!
pandas = "*" #"1.5.2"
scikit-learn = "*" #"^1.1.1"
matplotlib = "*" #"3.6.2" 
plotly = "*" #"5.6.0"
#chart_studio = "*" # plotly online tool
bokeh = "*" #"^2.4.3"
graphviz = "*" #"^0.20"
wordcloud = "*" #"^1.8.2.2"

## Automatically derived packages
#typing-extensions = "4.1.1"
#kiwisolver = "<=1.3.2" # needed by matplotlib
#packaging = "^21.3" # needed by setuptools-scm
#tomli = "2.0.1" # needed by setuptools-scm
#setuptools-scm = "7.0.5"

# Common must-haves (end)
##################################################

##################################################
# Common optionals

## Local files
torch = { path = "localPackages/torch-1.12.1+cu116-cp39-cp39-manylinux1_x86_64.whl" }
#https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-linux_x86_64.whl

## Exactly 22.05
tensorflow-gpu = "2.8.1" # for tensorflow-* versions # 2.11.0 unpack error
#scipy = "1.8.0"

## At least 22.05
#torch = "1.11.0" # not working
scipy = "1.9.0"

## Exactly 22.11
#scipy = "1.9.1"
#torch = "1.12.1" # not working
#tensorflow-gpu = "2.10.0" # for tensorflow-* versions # 2.11.0 unpack error
jax = "0.3.23" # needed by tensorflow-datasets
jaxlib = "<0.3.22" # version lower than or equal to jax 
#jaxlib = { path = "jaxlib-0.1.65+cuda112-cp39-none-manylinux2010_x86_64.whl" }
#https://storage.googleapis.com/jax-releases/jax_cuda_releases.html

## At least 22.11
#meson-python = "0.9.0" # needed by scipy
tensorflow-metadata = "^1.11.0"

##
### publishing system
nbdev = "*" #"^2.3.0"
quarto = "*" #"^0.1.0"
twine = "*" #"^4.0.1"
# cryptography needed by SecretStorage needed by keyring needed by twine
# version fixed due to sha256
cryptography = "*" #"37.0.4"

### numerical
pyro-ppl = "*" #"^1.8.0" # error: Missing suitable source/wheel file entry for torch
aesara = "*" #"^2.5.3"
numpyro = "*" #"^0.9.2" # needs jaxlib
#meson-python = "*" # needed by scipy

kaggle = "*" #"^1.5.12"

#tensorflow-datasets = "*" #"4.5.2"
#torchvision = { version = "^0.12.0", source = "pypi"} # needs explicit : scipy

### Etc
#hatchling = "0.25.1" # 1.0.0 not working
#cppy = "<=1.1.0"
#numba = "0.55.2"
#orjson = "3.6.7"
#apache-beam = "2.40.0"
#flit = "3.7.1"
#py3nvml = "^0.2.7"
#multiprocess = "^0.70.13"
#pydot = "^1.4.2"
#opencv-python = "4.5.4" #"^4.5.4"
#transformers = "4.16.2" # "4.16.2" 
#robobrowser = "^0.5.3"
#ray = "^1.13.0" # ?? 2.1.0 doesn't work

## Automatically derived packages
#scipy = "1.9.3"
#tensorboard = "2.10.0" # needed by tensorflow-gpu
#tensorflow-estimator = "2.10.0" # needed by tensorflow-gpu
#h5py = "^3.6.0" # needed by tensorflow-gpu
#termcolor = "1.1.0" # needed by tensorflow-gpu
#zipp = "3.7.0" # needed by markdown - tensorboard
#tqdm = "^4.64.0" # needed by pyro-ppl,kaggle
#protobuf = "3.19.5" # needed by tensorflow-gpu, grpcio-tools
#flatbuffers = "2.0.0" # needed by tensorflow-gpu # "<3.0.0" for deepchem
#keras = "^2.8.0" # needed by tensorflow-gpu
#urllib3 = "1.26.9" # needed by requests - tensorboard
#idna = "3.3" # needed by requests - tensorboard
#nbformat = "5.7.0" #needed by nbformat

# Common optionals (end)
##################################################

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##################################################
# Title

## Local files

## Exactly 22.05

## At least 22.05

## Exactly 22.11

## At least 22.11

##

## Automatically derived packages

# Title (end)
##################################################

##################################################
## Packages that creates setuptools item in poetry.lock 
## (either directly or through other dependencies) -> infinite recursion
# numpy, Cython, seaborn, tensorflow-gpu, tensorflow-estimator, pymc, ipython
##################################################
## Needed for polynote
# numpy, pandas, jedi, jep, jsonschema, virtualenv, nbconvert, ipython
##################################################
## Doesn't exists in nixpkgs
#bambi = "^0.9.0"
##################################################
## Failed to build
#pycuda = "^2021.1"
