[tool.poetry]
name = "my-python-package"
version = "0.1.0"
description = ""
authors = ["Suwon Park <sepiabrown@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
