[tool.poetry]
name = "my-python-package"
version = "0.1.0"
description = ""
authors = ["Suwon Park <sepiabrown@naver.com>"]

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.11.0"
numpy = "^1.22.3"
pyro-ppl = "^1.8.0"
torchvision = "^0.12.0"
ronald-bdl = {path = "ronald_bdl", develop = true}
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
